crectified url links

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="main">
          <header>
              <span class="sp1">Ismail</span>
-             <span class="sp2"><img src="imagees/union.png" alt=""></span>
+             <span class="sp2"><img src="./imagees/union.png" alt=""></span>
          </header>
          
              <section class="paragraph">
@@ -32,11 +32,11 @@
                  <a href="##">LET’S CONNECT</a>
 
                     <ul class="social-media">
-                       <li> <img src="imagees/twit.png" alt=""></li>
-                       <li><img src="imagees/linked.png" alt=""></li>
-                       <li><img src="imagees/mail.png" alt=""></li>
-                       <li><img src="imagees/pp.png" alt=""></li>
-                       <li><img src="imagees/peace.png" alt=""></li>
+                       <li> <img src="./imagees/twit.png" alt=""></li>
+                       <li><img src="./imagees/linked.png" alt=""></li>
+                       <li><img src="./imagees/mail.png" alt=""></li>
+                       <li><img src="./imagees/pp.png" alt=""></li>
+                       <li><img src="./imagees/peace.png" alt=""></li>
                     </ul>                 
                 </section>
          
